# VOICE-AGENT

./: .env.example  .gitignore  DESIGN_LANGUAGE.md  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/ai/: models.py  router.py  schemas.py  service.py
apps/api/app/audit/: models.py
apps/api/docs/: ABAC_GUIDE.md  ADMINISTRATOR_GUIDE.md  AIOPS_ALERTING_GUIDE.md  AIOPS_API.md  AIOPS_ARCHITECTURE.md  AIOPS_COST_INTELLIGENCE_GUIDE.md  AIOPS_DASHBOARD_GUIDE.md  AIOPS_EXTENSION_GUIDE.md  AIOPS_HEALTH_MONITORING_GUIDE.md  AIOPS_METRICS_COLLECTION_GUIDE.md  AI_ARCHITECTURE_BLUEPRINT.md  AI_BENCHMARKING_GUIDE.md  AI_EMPLOYEE_API.md  AI_EMPLOYEE_BUILDER.md  AI_EMPLOYEE_CONFIGURATION_GUIDE.md  AI_EMPLOYEE_LIFECYCLE.md  AI_EMPLOYEE_TEMPLATES.md  AI_EMPLOYEE_VERSIONING.md  AI_EVALUATION_GUIDE.md  AI_EXTENSION_GUIDELINES.md  AI_MEMORY_CONTEXT_ARCHITECTURE.md  AI_PROVIDER_ABSTRACTION.md  AI_REPLAY_STUDIO_GUIDE.md  AI_SEQUENCE_DIAGRAMS.md  AI_STUDIO_API.md  AI_STUDIO_ARCHITECTURE.md  AI_STUDIO_COLLABORATION_GUIDE.md  AI_STUDIO_DEPLOYMENT_GUIDE.md  AI_STUDIO_TESTING_GUIDE.md  AI_TOOL_MULTI_AGENT_VOICE_ARCHITECTURE.md  API_DESIGN_GUIDE.md  API_KEY_SECURITY.md  API_STANDARDS.md  API_VERSIONING_MIGRATION_GUIDE.md  AUDIT_GUIDE.md  AUTHENTICATION_API.md  BILLING_API.md  BILLING_ARCHITECTURE.md  BILLING_DEVELOPER_INTEGRATION_GUIDE.md  BILLING_LICENSING_GUIDE.md  (+117 more)
apps/api/scripts/: run_migrations.py  smoke_identity.py
apps/api/tests/: test_realtime_voice_pipeline.py
(+244 files in other folders)
