[project]
name = "voicesense-api"
version = "0.1.0"
description = "VoiceSense API service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "pwdlib[argon2]>=0.2.0",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "ruff>=0.6.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "scripts*"]